Fix: (sidebar) Ajuste no z-index da sidebar

--- a/src/scss/organisms/sidebar/_all.scss
+++ b/src/scss/organisms/sidebar/_all.scss
@@ -2,6 +2,7 @@
   position: relative;
   display: flex;
   min-height: 100%;
+  z-index: 9;
 
   &-backdrop {
     position: fixed;
